--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/console": "^6.2",
         "symfony/css-selector": "^6.2",
         "symfony/dom-crawler": "^6.2",
-        "thecodingmachine/safe": "^2.4"
+        "thecodingmachine/safe": "^2.4",
+        "symfony/filesystem": "^6.2"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.29",
@@ -53,6 +54,7 @@
         "infection": "infection --threads=max --only-covered",
         "phpstan": "phpstan",
         "psalm": "psalm --no-progress --no-cache",
+        "clover-crap-check": "php clover-crap-check.php ",
         "test": [
             "composer normalize --dry-run",
             "@phpstan",
