--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "symfony/console": "^6.2",
         "symfony/css-selector": "^6.2",
         "symfony/dom-crawler": "^6.2",
-        "thecodingmachine/safe": "^2.4",
-        "symfony/filesystem": "^6.2"
+        "symfony/filesystem": "^6.2",
+        "thecodingmachine/safe": "^2.4"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.29",
@@ -50,17 +50,18 @@
         }
     },
     "scripts": {
+        "clover-crap-check": "php clover-crap-check.php build/coverage/clover.xml 10",
         "coverage-check": "coverage-check build/coverage/clover.xml 100",
         "infection": "infection --threads=max --only-covered",
         "phpstan": "phpstan",
         "psalm": "psalm --no-progress --no-cache",
-        "clover-crap-check": "php clover-crap-check.php ",
         "test": [
             "composer normalize --dry-run",
             "@phpstan",
             "@psalm",
             "@test:unit",
             "@coverage-check",
+            "@clover-crap-check",
             "@infection",
             "@test:functional"
         ],
