--- a/composer.json
+++ b/composer.json
@@ -13,22 +13,22 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "symfony/console": "^6.2",
-        "symfony/css-selector": "^6.2",
-        "symfony/dom-crawler": "^6.2",
-        "symfony/filesystem": "^6.2",
-        "thecodingmachine/safe": "^2.4"
+        "php": ">=8.4",
+        "symfony/console": "^7.2",
+        "symfony/css-selector": "^7.2",
+        "symfony/dom-crawler": "^7.2",
+        "symfony/filesystem": "^7.2",
+        "thecodingmachine/safe": "^3.0"
     },
     "require-dev": {
-        "ergebnis/composer-normalize": "^2.30",
-        "infection/infection": "^0.26.19",
-        "phpstan/phpstan": "^1.10",
+        "ergebnis/composer-normalize": "^2.45",
+        "infection/infection": "^0.29.14",
+        "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^10.0",
-        "psalm/plugin-phpunit": "^0.18.4",
+        "psalm/plugin-phpunit": "^0.19.3",
         "rregeer/phpunit-coverage-check": "^0.3.1",
-        "symfony/var-dumper": "^6.2",
-        "vimeo/psalm": "^5.7"
+        "symfony/var-dumper": "^7.2",
+        "vimeo/psalm": "^6.9"
     },
     "autoload": {
         "psr-4": {
@@ -66,7 +66,7 @@
             "@infection",
             "@test:functional"
         ],
-        "test:functional": "phpunit --testsuite=Functional --no-coverage",
-        "test:unit": "phpunit --testsuite=Unit"
+        "test:functional": "phpunit --testsuite=Functional --no-coverage --display-phpunit-deprecations",
+        "test:unit": "XDEBUG_MODE=coverage phpunit --testsuite=Unit --display-phpunit-deprecations"
     }
 }
